[package]
name = "otel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
once_cell = "1.19"
opentelemetry = "0.24.0"
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio", "http", "tokio", "trace"] }
lazy_static = "1.5.0"
opentelemetry-otlp = { version = "0.17.0", features = ["http-proto", "tokio", "grpc-tonic","tonic","trace","reqwest-rustls"]}
tokio = { version = "1", features = ["full"] }
opentelemetry-semantic-conventions = "0.16.0"
tracing = { version = "0.1", default-features = false }
tracing-core = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
async-std = "1.12.0"
reqwest = { version = "0.12.7", features = ["rustls-tls"] }
