[package]
name = "wasm-wasi-component"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
futures-util = { version = "0.3.29", default-features = false }
http = "0.2.9"
http-body = { version = "1.0.0-rc.2", default-features = false }
http-body-util = "0.1.0-rc.2"
tokio = { version = "1.33.0", default-features = false }
wasmtime = "14.0.2"
wasmtime-wasi = "14.0.2"
wasmtime-wasi-http = "14.0.2"

[build-dependencies]
bindgen = "0.68.1"
cc = "1.0.83"

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'
